# simple_app

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
db/: datastore.csv  students.db  students.db-journal
include/: datastore.h  helper_functions.hpp  student.h  subjects.h
sh/: conditionals.sh  hello_world.sh  loops.sh  second.sh
src/: datastore.cpp  student.cpp  student.h  subjects.cpp
tests/: datastore.csv  names.txt  people.csv  singleton.cpp  students.csv  students.db  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test_key_val.cpp  test_print_csv.cpp  test_watchdog.cpp  testdb.cpp  testds.cpp  testprint.cpp  teststr.cpp
txt_linux/: Bitcoinprice.txt  years.txt
